cert-manager-work.d/http01/ingress-abby-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-kids
    acme.cert-manager.io/http01-ingress-class: nginx-kids
  name: abby-ingress
  namespace: kids
spec:
  tls:
    - hosts:
        - abby.shermandemo.com
      secretName: abby-quickstart-tls
  rules:
    - host: abby.shermandemo.com
      http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
