cert-manager-work.d/http01/ingress-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: duncan-ingress
  namespace: pets
spec:
  tls:
  - hosts:
    - duncan.shermandemo.com
    secretName: duncan-quickstart-tls
  rules:
  - host: duncan.shermandemo.com
    http:
      paths:
      - backend:
          service:
            name: web
            port: 
              number: 80
        path: /
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: max-ingress
  namespace: pets
spec:
  tls:
  - hosts:
    - max.shermandemo.com
    - mindy.shermandemo.com
    secretName: max-quickstart-tls
  rules:
  - host: max.shermandemo.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: mindy.shermandemo.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
