cert-manager-work.d/http01/ingress-buddy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod
   kubernetes.io/ingress.class: nginx-duncan
   acme.cert-manager.io/http01-ingress-class: nginx-duncan
 name: buddy-ingress
 namespace: pets
spec:
  tls:
    - hosts:
        - buddy.shermandemo.com
      secretName: buddy-quickstart-tls
  rules:
    - host: buddy.shermandemo.com
      http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
