cert-manager-work.d/http01/ingress-duncan.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-duncan
    acme.cert-manager.io/http01-ingress-class: nginx-duncan
  name: duncan-ingress
  namespace: pets
spec:
  tls:
  - hosts:
    - duncan.shermandemo.com
    secretName: duncan-quickstart-tls
  rules:
  - host: duncan.shermandemo.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
