cert-manager-work.d/http01/ingress-max-depracated.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-max
    acme.cert-manager.io/http01-ingress-class: nginx-max
  name: max-ingress
  namespace: pets
spec:
  tls:
  - hosts:
    - max.shermandemo.com
    - mindy.shermandemo.com
    secretName: max-quickstart-tls
  rules:
  - host: max.shermandemo.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  - host: mindy.shermandemo.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
