cert-manager-work.d/http01/ingress-pets.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: pets-ingress
  namespace: pets
spec:
  tls:
  - hosts:
    - pets.shermandemo.com
    - duncan.shermandemo.com
    - max.shermandemo.com
    - mindy.shermandemo.com
    - bigleta.shermandemo.com
    secretName: pets-quickstart-tls
  rules:
  - host: pets.shermandemo.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: duncan.shermandemo.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: max.shermandemo.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: mindy.shermandemo.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: bigleta.shermandemo.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
