cert-manager-work.d/http01/ingress-sapusa-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-duncan
    acme.cert-manager.io/http01-ingress-class: nginx-duncan
  name: duncan-ingress
  namespace: pets
spec:
  tls:
    - hosts:
        - sapusa.shermandemo.com
      secretName: sapusa-quickstart-tls
  rules:
    - host: sapusa.shermandemo.com
      http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
